# pyts-framework

./: .gitignore  Makefile  README.md  pyproject.toml
.ve3/: pyvenv.cfg
python/minitodo/: __main__.py  di.py  server.py
python/minitodo/dtos/: todo_dto.py
python/minitodo/interfaces/services/: todoserviceinterface.py
python/minitodo/models/: todo.py
python/minitodo/routes/: todos.py
python/minitodo/services/: todoeservice.py
python/testminitodo/: test_minitodo.py
typescript/v1/example/: vite.config.ts
