[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minitodo"
version = "0.1.0"
description = "Mini todo app for demo purposes"
requires-python = ">=3.10"
dependencies = [
    "fastapi~=0.115.0",
    "sqlalchemy~=2.0.0",
    "uvicorn~=0.30.0"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ipython",
    "isort",
    "black"
]

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["minitodo"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
packages = ["minitodo"]
mypy_path = "python"


[tool.pytest.ini_options]
addopts = "--capture=no"
log_cli = "true"
log_cli_level = "debug"
log_format = "%(asctime)s.%(msecs)03d %(name)s [%(levelname)s] [%(filename)s:%(lineno)s %(funcName)s] %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%S"